[package]
name = "nih_plug_webview"
version = "0.1.0"
edition = "2021"
authors = ["Max Huttunen <max.huttunen@gmail.com>"]
license = "ISC"

description = "An adapter to use webview GUIs with NIH-plug"

[workspace]
members = [
  "example",
  "xtask"
]

[dependencies]
nih_plug = { git = "https://github.com/poucet/nih-plug" }
serde_json = "1.0"
wry = { version = "0.51.2" }
baseview = { git = "https://github.com/poucet/baseview" }
raw-window-handle = "0.6.2"
crossbeam = "0.8.4"
keyboard-types = "0.6.2"
